WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151685
CVE-2016-1778
Fix anomaly where isMouseEvent returns false for wheel events
https://bugs.webkit.org/show_bug.cgi?id=151685
Summary
Fix anomaly where isMouseEvent returns false for wheel events
Darin Adler
Reported
2015-11-30 17:09:59 PST
Fix anomaly where isMouseEvent returns false for wheel events
Attachments
Patch
(12.71 KB, patch)
2015-11-30 17:18 PST
,
Darin Adler
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2015-11-30 17:18:21 PST
Created
attachment 266305
[details]
Patch
Alexey Proskuryakov
Comment 2
2015-11-30 22:21:37 PST
Comment on
attachment 266305
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=266305&action=review
> Source/WebCore/dom/WheelEvent.h:-94 > - virtual bool isMouseEvent() const override;
Should we add "final" to the version in MouseEvent.h now?
Darin Adler
Comment 3
2015-12-01 10:23:30 PST
Comment on
attachment 266305
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=266305&action=review
>> Source/WebCore/dom/WheelEvent.h:-94 >> - virtual bool isMouseEvent() const override; > > Should we add "final" to the version in MouseEvent.h now?
Yes. I have a patch now that does a lot more to MouseEvent that I will land separately.
WebKit Commit Bot
Comment 4
2015-12-01 13:15:00 PST
Comment on
attachment 266305
[details]
Patch Clearing flags on attachment: 266305 Committed
r192903
: <
http://trac.webkit.org/changeset/192903
>
WebKit Commit Bot
Comment 5
2015-12-01 13:15:05 PST
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 6
2015-12-01 14:27:45 PST
Updated bindings test results in
r192915
(EWS should run bindings tests!!!)
David Kilzer (:ddkilzer)
Comment 7
2015-12-01 15:02:01 PST
<
rdar://problem/23672418
>
Brent Fulgham
Comment 8
2015-12-02 08:57:41 PST
Comment on
attachment 266305
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=266305&action=review
>>> Source/WebCore/dom/WheelEvent.h:-94 >>> - virtual bool isMouseEvent() const override; >> >> Should we add "final" to the version in MouseEvent.h now? > > Yes. I have a patch now that does a lot more to MouseEvent that I will land separately.
I also thought we were dropping 'virtual' for 'override' methods, since this is redundant?
Darin Adler
Comment 9
2015-12-02 13:52:51 PST
(In reply to
comment #8
)
> I also thought we were dropping 'virtual' for 'override' methods, since this > is redundant?
Antti did propose that, and I spoke in favor of it, but I am not sure it’s settled. I have not seen a lot of patches doing that since that discussion.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug